# Hornet

./: .gitignore  COLD-PITCH-eval-features-RESPONSE.md  COLD-PITCH-eval-features.md  COLD-PITCH-kimi-objective-layer.md  COMMS_CLAUDE_HANDOFF_P4.md  COMMS_CLAUDE_HIERARCHY_ISOLATION.md  COMMS_CLAUDE_PERFT_RESULT.md  COMMS_CLAUDE_REPLY-sync-2026-06-02.md  COMMS_CLAUDE_REPLY.md  COMMS_CLAUDE_SYNC-2026-06-02.md  COMMS_KIMI_HIERARCHICAL_EVAL_ANALYSIS.md  COMMS_KIMI_PERFT_REPLY.md  COMMS_KIMI_REPLY.md  COMMS_KIMI_REPLY_TO_CLAUDE_HIERARCHY.md  COMMS_KIMI_SHALLOW_PRUNING_ANALYSIS.md  COMMS_KIMI_SHALLOW_PRUNING_SOLUTION.md  Cargo.toml  ENGINE-HANDOFF.md  ENGINE-MATH.md  HANDOFF-NEWCHAT-2026-06-10.md  HANDOFF.md  HORNET-BUILD-SPEC-v0.2-DELTA.md  HORNET-BUILD-SPEC.md  HOW-EVAL-TERMS-ARE-MADE.md  KIMI-INDEPENDENT-PLAN-eval-next-phase.md  KIMI-TODO.md  PITCH-eval-recalibration.md  PITCH-exchange-aware-eval.md  PITCH-ffa-bounty-scoring.md  PITCH-for-new-agents.md  PITCH-maxn-shallow-pruning.md  PITCH-piece-intent-tensor.md  PITCH-relational-eval-terms-v2.md  PITCH-relational-eval-terms.md  PITCH-secondary-zones.md  PITCH-selective-intent-scaling.md  PITCH-strength-gate.md  PLAN-three-agent-worksplit-2026-06-10.md  README.md  REFERENCE-eval-tuning.md  (+22 more)
Playbook/: README.md
baselines/: README.md  human_4pc_game_100527014.pgn4  human_4pc_game_100527486.pgn4  human_4pc_game_100532097.pgn4  human_4pc_game_100758459.pgn4  human_4pc_game_101543960.pgn4  human_4pc_game_104066385.pgn4  human_4pc_game_98001820.pgn4  (+1 more)
experiments/: README.md  (+37 more)
hornet-view/: Cargo.toml
hornet-view/src/: main.rs
(+448 files in other folders)
